# easy_mapping_plugin_for_naev

./: .gitignore  GNUmakefile  README.md  copyright  meson.build  plugin.toml  plugin.xml
events/: local_system_map_seller.lua
gettext/ja/LC_MESSAGES/: easy_mapping_mod.mo
po/: POTFILES.in  ja.po  meson.build
po/its/: translation.its  translation.loc
