# Build settings for the translation of Easy Mapping Mod.
# Copyright © 2023 OOTA, Masato
# This is published under CC0 1.0.
# For more information, see CC0 1.0 Universal (CC0 1.0) at <https://creativecommons.org/publicdomain/zero/1.0/legalcode>.

project('easy_mapping_mod', 'c',
    default_options: [
    ],
    license: 'GPL-3.0-or-later',
    # license_files: ['../LICENSE'],
)

subdir('po')
