# Build settings for Unit Test of prec_ctrl.
# Copyright © 2023 OOTA, Masato
# This is published under CC0 1.0.
# For more information, see CC0 1.0 Universal (CC0 1.0) at <https://creativecommons.org/publicdomain/zero/1.0/legalcode>.

i18n = import('i18n')

i18n.gettext('easy_mapping_mod',
    args: [
        '--from-code=utf-8',
    ],
    data_dirs: [meson.current_source_dir()],
    install_dir: meson.project_source_root() / 'gettext',
)
